fixed alignment now pixel perfect
let the zoom begin...

--- a/app/www/react-app/less/app.less
+++ b/app/www/react-app/less/app.less
@@ -205,9 +205,9 @@ body {
       flex-direction: row;
       align-items: center;
       width: 100%;
-      max-height: 125px;
+      height: 125px;
       overflow-y: hidden;
-      margin-bottom: .5em;
+      margin-bottom: .25em;
       color: inherit;
       text-decoration: none;
 
@@ -222,6 +222,9 @@ body {
         }
 
         img.img-poster {
+          position: relative;
+          top: 0;
+          left: 0;
           width: 100%;
           height: auto;
           min-height: 115px;
